RAP-3302 Set overflow hidden to avoid overlapping text

--- a/app_storefront_core/cartridge/scss/default/_compare_tools.scss
+++ b/app_storefront_core/cartridge/scss/default/_compare_tools.scss
@@ -98,10 +98,14 @@
 	table-layout: fixed;
 	width: 100%;
 	th {
+		overflow: hidden;
 		padding: .5em;
 		&:first-of-type {
 			background-color: $gainsboro;
 		}
+	}
+	td {
+		overflow: hidden;
 	}
 	a {
 		&:hover {
